Bug 274730 - Akonadi crash after adding an IMAP resource
Summary: Akonadi crash after adding an IMAP resource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: libakonadi (other bugs)
Version First Reported In: 4.7
Platform: Compiled Sources FreeBSD
: HI crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 275830 276862 279307 282098 284772 288223 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-02 09:48 UTC by Raphael Kubo da Costa
Modified: 2011-12-09 20:51 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.56 KB, text/plain)
2011-07-01 19:57 UTC, Vishesh Handa
Details
New crash information added by DrKonqi (9.62 KB, text/plain)
2011-08-02 17:41 UTC, Hrvoje Senjan
Details
New crash information added by DrKonqi (9.60 KB, text/plain)
2011-08-31 18:05 UTC, Hrvoje Senjan
Details
- (7.68 KB, text/plain)
2011-09-12 13:53 UTC, Christophe Marin
Details
New crash information added by DrKonqi (9.72 KB, text/plain)
2011-09-22 16:12 UTC, Adrien Bellanger
Details
New crash information added by DrKonqi (7.85 KB, text/plain)
2011-09-24 22:24 UTC, simon
Details
New crash information added by DrKonqi (7.45 KB, text/plain)
2011-10-07 11:41 UTC, Milian Wolff
Details
New crash information added by DrKonqi (16.84 KB, text/plain)
2011-11-03 00:02 UTC, Christian Mollekopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2011-06-02 09:48:05 UTC
Application: kontact (4.7 pre)
KDE Platform Version: 4.6.80 (4.7 Beta1) (Compiled from sources)
Qt Version: 4.7.4
Operating System: FreeBSD 8.2-STABLE amd64

-- Information about the crash:
- What I was doing when the application crashed:

I had KMail2 open in Kontact and launched its settings dialog. After adding an IMAP resource for my mail account, Kontact crashed after I pressed OK.

-- Backtrace:
Application: Kontact (kontact), signal: Abort trap: 6
[Switching to Thread 812261880 (LWP 100322/kontact)]
[Current thread is 1 (Thread 812261880 (LWP 100322/kontact))]

Thread 2 (Thread 8116041c0 (LWP 100088/kontact)):
[KCrash Handler]
#94 0x000000080a67923c in thr_kill () from /lib/libc.so.7
#95 0x000000080a713b5b in abort () from /lib/libc.so.7
#96 0x0000000807f27007 in qt_message_output (msgType=QtFatalMsg, 
    buf=0x8166dd218 "ASSERT: \"parentCollection != m_rootCollection\" in file /home/rakuco/kde4/src/kdepimlibs/akonadi/entitytreemodel_p.cpp, line 635") from /home/rakuco/kde4/qt4/lib/libQtCore.so.4
#97 0x0000000807f2717a in qt_message (msgType=QtFatalMsg, msg=0x8080c9d90 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffffffc468) from /home/rakuco/kde4/qt4/lib/libQtCore.so.4
#98 0x0000000807f2790a in qFatal (msg=0x8080c9d90 "ASSERT: \"%s\" in file %s, line %d") from /home/rakuco/kde4/qt4/lib/libQtCore.so.4
#99 0x0000000807f26bc4 in qt_assert (assertion=0x80526de28 "parentCollection != m_rootCollection", file=0x80526d408 "/home/rakuco/kde4/src/kdepimlibs/akonadi/entitytreemodel_p.cpp", line=635)
   from /home/rakuco/kde4/qt4/lib/libQtCore.so.4
#100 0x000000080519cdac in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x8167ad700, collection=@0x7fffffffc950) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#101 0x000000080519d7aa in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x8167ad700, collection=@0x7fffffffc950, parent=@0x7fffffffc970)
   from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#102 0x0000000805196a2a in Akonadi::EntityTreeModel::qt_metacall (this=0x816655d20, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fffffffc8e0) at qglobal.h:1884
#103 0x0000000808052c0e in QMetaObject::metacall (object=0x816655d20, cl=QMetaObject::InvokeMetaMethod, idx=43, argv=0x7fffffffc8e0) at qbytearray.h:68
#104 0x0000000808067a7a in QMetaObject::activate (sender=0x816653ae0, m=0x80550db40, local_signal_index=6, argv=0x7fffffffc8e0) at qbytearray.h:68
#105 0x00000008051df4db in Akonadi::Monitor::collectionAdded (this=0x816653ae0, _t1=@0x7fffffffc950, _t2=@0x7fffffffc970) at qbytearray.h:383
#106 0x00000008051e3a89 in Akonadi::MonitorPrivate::emitCollectionNotification (this=0x81e469000, msg=@0x7fffffffccd0, col=@0x7fffffffcb00, par=@0x7fffffffcb20, dest=@0x7fffffffcb10)
   from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#107 0x00000008051e1798 in Akonadi::MonitorPrivate::emitNotification (this=0x81e469000, msg=@0x7fffffffccd0) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#108 0x000000080514c356 in Akonadi::ChangeRecorderPrivate::emitNotification (this=0x81e469000, msg=@0x7fffffffccd0) at qbytearray.h:68
#109 0x00000008051e239d in Akonadi::MonitorPrivate::flushPipeline (this=0x81e469000) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#110 0x00000008051e2414 in Akonadi::MonitorPrivate::dataAvailable (this=0x81e469000) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#111 0x00000008051df220 in Akonadi::Monitor::qt_metacall (this=0x816653ae0, _c=QMetaObject::InvokeMetaMethod, _id=23, _a=0x7fffffffce10) at qbytearray.h:383
#112 0x000000080514bc16 in Akonadi::ChangeRecorder::qt_metacall (this=0x816653ae0, _c=QMetaObject::InvokeMetaMethod, _id=27, _a=0x7fffffffce10) at qbytearray.h:68
#113 0x0000000808052c0e in QMetaObject::metacall (object=0x816653ae0, cl=QMetaObject::InvokeMetaMethod, idx=27, argv=0x7fffffffce10) at qbytearray.h:68
#114 0x0000000808067a7a in QMetaObject::activate (sender=0x81e4cdbe0, m=0x80550b3a0, local_signal_index=0, argv=0x0) at qbytearray.h:68
#115 0x0000000805189f4d in Akonadi::EntityCacheBase::dataAvailable (this=0x81e4cdbe0) at entitycache_p.moc:58
#116 0x00000008051e87d8 in Akonadi::EntityCache<Akonadi::Collection, Akonadi::CollectionFetchJob, Akonadi::CollectionFetchScope>::fetchResult (this=0x81e4cdbe0, job=0x81667e8a0)
   from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#117 0x0000000805189f1a in Akonadi::EntityCacheBase::qt_metacall (this=0x81e4cdbe0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffffffd040) at entitycache_p.moc:58
#118 0x0000000808052c0e in QMetaObject::metacall (object=0x81e4cdbe0, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x7fffffffd040) at qbytearray.h:68
#119 0x0000000808067a7a in QMetaObject::activate (sender=0x81667e8a0, m=0x807dbe820, local_signal_index=3, argv=0x7fffffffd040) at qbytearray.h:68
#120 0x00000008079833b9 in KJob::result (this=0x81667e8a0, _t1=0x81667e8a0) at qstring.h:729
#121 0x0000000807982791 in KJob::emitResult (this=0x81667e8a0) at qstring.h:729
#122 0x00000008051da342 in Akonadi::JobPrivate::delayedEmitResult (this=0x81f4b5900) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#123 0x00000008051db4c7 in Akonadi::Job::qt_metacall (this=0x81667e8a0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x81fcd62f0) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#124 0x000000080515aea9 in Akonadi::CollectionFetchJob::qt_metacall (this=0x81667e8a0, _c=QMetaObject::InvokeMetaMethod, _id=34, _a=0x81fcd62f0) from /home/rakuco/kde4/lib/libakonadi-kde.so.4
#125 0x0000000808052c0e in QMetaObject::metacall (object=0x81667e8a0, cl=QMetaObject::InvokeMetaMethod, idx=34, argv=0x81fcd62f0) at qbytearray.h:68
#126 0x00000008080621c2 in QMetaCallEvent::placeMetaCall (this=0x81f46b880, object=0x81667e8a0) at qbytearray.h:68
#127 0x000000080806348c in QObject::event (this=0x81667e8a0, e=0x81f46b880) at qbytearray.h:68
#128 0x0000000808d35946 in QApplicationPrivate::notify_helper (this=0x811604e00, receiver=0x81667e8a0, e=0x81f46b880) at qglobal.h:1100
#129 0x0000000808d32f6c in QApplication::notify (this=0x7fffffffdf10, receiver=0x81667e8a0, e=0x81f46b880) at qglobal.h:1100
#130 0x00000008072b52db in KApplication::notify (this=0x7fffffffdf10, receiver=0x81667e8a0, event=0x81f46b880) at qglobal.h:1884
#131 0x000000080804aca4 in QCoreApplication::notifyInternal (this=0x7fffffffdf10, receiver=0x81667e8a0, event=0x81f46b880) at qglobal.h:1884
#132 0x00000008025b8e27 in QCoreApplication::sendEvent () from /home/rakuco/kde4/qt4/lib/libQtWebKit.so.4
#133 0x000000080804bed0 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x81162b040) at qglobal.h:1884
#134 0x000000080804baef in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at qglobal.h:1884
#135 0x000000080808434f in QCoreApplication::sendPostedEvents () at qbytearray.h:383
#136 0x0000000808083297 in postEventSourceDispatch (s=0x811610780) at qbytearray.h:383
#137 0x000000080abf2d0e in g_main_context_dispatch () from /usr/local/lib/libglib-2.0.so.0
#138 0x000000080abf607e in g_main_context_prepare () from /usr/local/lib/libglib-2.0.so.0
#139 0x000000080abf6662 in g_main_context_iteration () from /usr/local/lib/libglib-2.0.so.0
#140 0x0000000808083b6d in QEventDispatcherGlib::processEvents (this=0x81162d850, flags={i = 36}) at qbytearray.h:383
#141 0x0000000808e0cfe0 in QGuiEventDispatcherGlib::processEvents (this=0x81162d850, flags={i = 36}) at /usr/home/rakuco/kde4/src/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:79
#142 0x00000008080487f8 in QEventLoop::processEvents (this=0x7fffffffde80, flags={i = 36}) at /usr/home/rakuco/kde4/src/qt-copy/src/corelib/kernel/qeventloop.cpp:112
#143 0x000000080804894c in QEventLoop::exec (this=0x7fffffffde80, flags={i = 0}) at /usr/home/rakuco/kde4/src/qt-copy/src/corelib/kernel/qeventloop.cpp:112
#144 0x000000080804b396 in QCoreApplication::exec () at qglobal.h:1884
#145 0x0000000808d32ae4 in QApplication::exec () at qglobal.h:1100
#146 0x00000000004046c9 in main (argc=1, argv=0x7fffffffe3d0) at qglobal.h:1390

Thread 1 (Thread 812261880 (LWP 100322/kontact)):
#0  0x00000008083f743c in __error () from /lib/libthr.so.3
#1  0x00000008083f54e1 in pthread_cond_signal () from /lib/libthr.so.3
#2  0x00000008029075d3 in WTF::TCMalloc_PageHeap::scavengerThread () from /home/rakuco/kde4/qt4/lib/libQtWebKit.so.4
#3  0x0000000802906bc4 in WTF::TCMalloc_PageHeap::runScavengerThread () from /home/rakuco/kde4/qt4/lib/libQtWebKit.so.4
#4  0x00000008083ed4e1 in pthread_getprio () from /lib/libthr.so.3
#5  0x0000000000000000 in ?? ()

Reported using DrKonqi
Comment 1 Vishesh Handa 2011-07-01 19:57:23 UTC
Created attachment 61542 [details]
New crash information added by DrKonqi

kontact (4.8 pre) on KDE Platform 4.7.40 (4.7.40 (KDE 4.8 >= 200110623) using Qt 4.7.3

- What I was doing when the application crashed:

Added an IMAP account, got a couple of certificate expired dialogs. Accepted the certificates, and Konact crashed.

-- Backtrace (Reduced):
#11 0x00007febb9637510 in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x1a28f20, collection=...) at /home/vishesh/kde/src/kdepimlibs/akonadi/entitytreemodel_p.cpp:635
#12 0x00007febb9637f0e in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x1a28f20, collection=..., parent=...) at /home/vishesh/kde/src/kdepimlibs/akonadi/entitytreemodel_p.cpp:730
#13 0x00007febb9631132 in Akonadi::EntityTreeModel::qt_metacall (this=0x1a28e20, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fff60b86350) at /home/vishesh/kde/build/kdepimlibs/akonadi/entitytreemodel.moc:161
[...]
#15 0x00007febb967a1fb in Akonadi::Monitor::collectionAdded (this=0x1972190, _t1=..., _t2=...) at /home/vishesh/kde/build/kdepimlibs/akonadi/monitor.moc:211
#16 0x00007febb967e809 in Akonadi::MonitorPrivate::emitCollectionNotification (this=0x19e9cb0, msg=..., col=..., par=..., dest=...) at /home/vishesh/kde/src/kdepimlibs/akonadi/monitor_p.cpp:590
Comment 2 Christophe Marin 2011-07-08 08:56:13 UTC
*** Bug 276862 has been marked as a duplicate of this bug. ***
Comment 3 Christophe Marin 2011-07-08 09:13:58 UTC
from bug 275830:

-- Information about the crash:
- What I was doing when the application crashed:

I ran KMail for the first time (with no existing KMail1 settings), and stepped
through creating an IMAP account when the wizard came up (entering server
settings manually).  Just before the wizard finished (ie: just before it became
possible to click "Finish"), KMail crashed (but the wizard didn't).
Comment 4 Christophe Marin 2011-07-08 09:14:10 UTC
*** Bug 275830 has been marked as a duplicate of this bug. ***
Comment 5 Hrvoje Senjan 2011-08-02 17:41:59 UTC
Created attachment 62477 [details]
New crash information added by DrKonqi

kmail (4.8 pre) on KDE Platform 4.7.40 (4.7.40 (KDE 4.8 >= 20110623) using Qt 4.7.1

Duplicate of bug # 276862  , and # 274730 - i'm also using project neon's packages, built from master - 2+git20110801+r53827-17~natty1

-- Backtrace (Reduced):
#11 0x00007fcc1f82344f in qt_assert (assertion=0x7fcc2205fd98 "parentCollection != m_rootCollection", file=0x7fcc2205f190 "/build/buildd/project-neon-kdepimlibs-2+git20110728+r12204/akonadi/entitytreemodel_p.cpp", line=639) at global/qglobal.cpp:2027
#12 0x00007fcc21f84c25 in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x921050, collection=...) at /build/buildd/project-neon-kdepimlibs-2+git20110728+r12204/akonadi/entitytreemodel_p.cpp:639
#13 0x00007fcc21f85619 in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x921050, collection=..., parent=...) at /build/buildd/project-neon-kdepimlibs-2+git20110728+r12204/akonadi/entitytreemodel_p.cpp:734
#14 0x00007fcc21f7e728 in Akonadi::EntityTreeModel::qt_metacall (this=0x8b0c70, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fffb9ab6e00) at /build/buildd/project-neon-kdepimlibs-2+git20110728+r12204/obj-x86_64-linux-gnu/akonadi/entitytreemodel.moc:161
[...]
#17 0x00007fcc21fc7bad in Akonadi::Monitor::collectionAdded (this=0x910220, _t1=..., _t2=...) at /build/buildd/project-neon-kdepimlibs-2+git20110728+r12204/obj-x86_64-linux-gnu/akonadi/monitor.moc:211
Comment 6 Christophe Marin 2011-08-28 23:48:12 UTC
*** Bug 279307 has been marked as a duplicate of this bug. ***
Comment 7 Hrvoje Senjan 2011-08-31 18:05:01 UTC
Created attachment 63270 [details]
New crash information added by DrKonqi

kontact (4.8 pre) on KDE Platform 4.7.41 (4.7.41 (KDE 4.8 >= 20110807) using Qt 4.7.1

- What I was doing when the application crashed:

Again:(
akonadiserver --version
Akonadi 1.6.50

kmail -v    
Qt: 4.7.1
KDE Development Platform: 4.7.41 (4.7.41 (KDE 4.8 >= 20110807)
KMail: 4.8 pre

-- Backtrace (Reduced):
#11 0x00007ff3a5870164 in qt_assert (assertion=0x7ff3a11bda10 "parentCollection != m_rootCollection", file=0x7ff3a11bce60 "/build/buildd/project-neon-kdepimlibs-2+git20110830+r12266/akonadi/entitytreemodel_p.cpp", line=641) at global/qglobal.cpp:2027
#12 0x00007ff3a10e124a in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x155f910, collection=...) at /build/buildd/project-neon-kdepimlibs-2+git20110830+r12266/akonadi/entitytreemodel_p.cpp:641
#13 0x00007ff3a10e1c21 in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x155f910, collection=..., parent=...) at /build/buildd/project-neon-kdepimlibs-2+git20110830+r12266/akonadi/entitytreemodel_p.cpp:736
#14 0x00007ff3a10dacb0 in Akonadi::EntityTreeModel::qt_metacall (this=0x146d390, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fffe35d8f50) at /build/buildd/project-neon-kdepimlibs-2+git20110830+r12266/obj-x86_64-linux-gnu/akonadi/entitytreemodel.moc:161
[...]
#17 0x00007ff3a1124c73 in Akonadi::Monitor::collectionAdded (this=0x153a730, _t1=..., _t2=...) at /build/buildd/project-neon-kdepimlibs-2+git20110830+r12266/obj-x86_64-linux-gnu/akonadi/monitor.moc:211
Comment 8 Christophe Marin 2011-09-12 13:53:39 UTC
Created attachment 63586 [details]
-

Still valid in master
Comment 9 Christophe Marin 2011-09-16 09:32:02 UTC
*** Bug 282098 has been marked as a duplicate of this bug. ***
Comment 10 Adrien Bellanger 2011-09-22 16:12:34 UTC
Created attachment 63859 [details]
New crash information added by DrKonqi

kontact (4.8 pre) on KDE Platform 4.7.41 (4.7.41 (KDE 4.8 >= 20110807) using Qt 4.7.1

- What I was doing when the application crashed:
I have the same crash, each time I complete the add of a new IMAP account using the account wizard. Kmail and the account wizard crash but the account is created.

-- Backtrace (Reduced):
#11 0x00007ff603dac44f in qt_assert (assertion=0x7ff606ae7cd0 "parentCollection != m_rootCollection", file=0x7ff606ae7120 "/build/buildd/project-neon-kdepimlibs-2+git20110922+r12321/akonadi/entitytreemodel_p.cpp", line=641) at global/qglobal.cpp:2027
#12 0x00007ff606a0c81f in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0xd6e480, collection=...) at /build/buildd/project-neon-kdepimlibs-2+git20110922+r12321/akonadi/entitytreemodel_p.cpp:641
#13 0x00007ff606a0d213 in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0xd6e480, collection=..., parent=...) at /build/buildd/project-neon-kdepimlibs-2+git20110922+r12321/akonadi/entitytreemodel_p.cpp:736
#14 0x00007ff606a0620c in Akonadi::EntityTreeModel::qt_metacall (this=0xc2c550, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fff313368e0) at /build/buildd/project-neon-kdepimlibs-2+git20110922+r12321/obj-x86_64-linux-gnu/akonadi/entitytreemodel.moc:161
[...]
#17 0x00007ff606a4faf5 in Akonadi::Monitor::collectionAdded (this=0xc0d5d0, _t1=..., _t2=...) at /build/buildd/project-neon-kdepimlibs-2+git20110922+r12321/obj-x86_64-linux-gnu/akonadi/monitor.moc:217
Comment 11 simon 2011-09-24 22:24:05 UTC
Created attachment 63935 [details]
New crash information added by DrKonqi

kontact (4.8 pre) on KDE Platform 4.7.1 (4.7.1) using Qt 4.7.2

- What I was doing when the application crashed:

tried to add a mixedmaildir folder in kontact

-- Backtrace (Reduced):
#11 0x00007f0ed08b6e59 in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0xb43700, collection=...) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/akonadi/entitytreemodel_p.cpp:641
#12 0x00007f0ed08ba90b in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0xb43700, collection=..., parent=...) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/akonadi/entitytreemodel_p.cpp:736
#13 0x00007f0ed08ae394 in Akonadi::EntityTreeModel::qt_metacall (this=0xaeda50, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff20f5b610) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999_build/akonadi/entitytreemodel.moc:161
[...]
#15 0x00007f0ed08ee44a in Akonadi::Monitor::collectionAdded (this=0x458d, _t1=<value optimized out>, _t2=<value optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999_build/akonadi/monitor.moc:217
#16 0x00007f0ed08f024f in Akonadi::MonitorPrivate::emitCollectionNotification (this=0xb1aae0, msg=..., col=<value optimized out>, par=<value optimized out>, dest=<value optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/akonadi/monitor_p.cpp:598
Comment 12 Milian Wolff 2011-10-07 11:41:11 UTC
Created attachment 64308 [details]
New crash information added by DrKonqi

kmail (4.8 pre) on KDE Platform 4.7.2 (4.7.2) using Qt 4.7.4

- What I was doing when the application crashed:

ASSERT: "parentCollection != m_rootCollection" in file /home/milian/projects/kde4/kdepimlibs/akonadi/entitytreemodel_p.cpp, line 641

still valid... code is from current git

-- Backtrace (Reduced):
#11 0x00007f092d2504ba in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x21931d0, collection=...) at /home/milian/projects/kde4/kdepimlibs/akonadi/entitytreemodel_p.cpp:641
#12 0x00007f092d250eb8 in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x21931d0, collection=..., parent=...) at /home/milian/projects/kde4/kdepimlibs/akonadi/entitytreemodel_p.cpp:736
#13 0x00007f092d249f1e in Akonadi::EntityTreeModel::qt_metacall (this=0x20afde0, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fff721752f0) at /home/milian/projects/.build/kde4/kdepimlibs/akonadi/entitytreemodel.moc:161
[...]
#15 0x00007f092d293b17 in Akonadi::Monitor::collectionAdded (this=0x1eea920, _t1=..., _t2=...) at /home/milian/projects/.build/kde4/kdepimlibs/akonadi/monitor.moc:217
#16 0x00007f092d29837f in Akonadi::MonitorPrivate::emitCollectionNotification (this=0x1ee5140, msg=..., col=..., par=..., dest=...) at /home/milian/projects/kde4/kdepimlibs/akonadi/monitor_p.cpp:598
Comment 13 Christophe Marin 2011-10-29 14:13:53 UTC
*** Bug 284772 has been marked as a duplicate of this bug. ***
Comment 14 Christian Mollekopf 2011-11-03 00:02:44 UTC
Created attachment 65179 [details]
New crash information added by DrKonqi

akonadi_imap_resource (.) on KDE Platform 4.7.40 (4.7.40 (KDE 4.8 >= 200110623) using Qt 4.7.4

- What I was doing when the application crashed:

Tried to set serverside subscription on a newly created imap resource (possibly during sync)

-- Backtrace (Reduced):
#11 0x00007fa5a15864a4 in Akonadi::EntityTreeModelPrivate::retrieveAncestors (this=0x14c1290, collection=...) at /home/chrigi/devel/kde/kdepimlibs/akonadi/entitytreemodel_p.cpp:645
#12 0x00007fa5a1586ea2 in Akonadi::EntityTreeModelPrivate::monitoredCollectionAdded (this=0x14c1290, collection=..., parent=...) at /home/chrigi/devel/kde/kdepimlibs/akonadi/entitytreemodel_p.cpp:740
#13 0x00007fa5a157fed2 in Akonadi::EntityTreeModel::qt_metacall (this=0x1342cf0, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x7fff53289370) at /home/chrigi/devel/kde/build/kdepimlibs/akonadi/entitytreemodel.moc:161
[...]
#15 0x00007fa5a15c9bad in Akonadi::Monitor::collectionAdded (this=0x13424b0, _t1=..., _t2=...) at /home/chrigi/devel/kde/build/kdepimlibs/akonadi/monitor.moc:217
#16 0x00007fa5a15ce3c3 in Akonadi::MonitorPrivate::emitCollectionNotification (this=0x13424d0, msg=..., col=..., par=..., dest=...) at /home/chrigi/devel/kde/kdepimlibs/akonadi/monitor_p.cpp:600
Comment 15 Jekyll Wu 2011-12-04 17:47:30 UTC
*** Bug 288223 has been marked as a duplicate of this bug. ***
Comment 16 Allen Winter 2011-12-09 20:51:23 UTC
Git commit e775ebd988663510bc8f12c7af502ce54695c1b7 by Allen Winter.
Committed on 09/12/2011 at 21:27.
Pushed by winterz into branch 'master'.

in monitoredollectionAdded(), don't attempt to find the ancestors
of a collection that's a root collection -- well, because those
collections don't have any ancestors.  This side-steps an assert.

BUG: 274730
FIXED-IN: 4.8.0

M  +3    -1    akonadi/entitytreemodel_p.cpp

http://commits.kde.org/kdepimlibs/e775ebd988663510bc8f12c7af502ce54695c1b7