in monitoredollectionAdded(), don't attempt to find the ancestors of a collection that's a root collection -- well, because those collections don't have any ancestors.  This side-steps an assert.

BUG: 274730
FIXED-IN: 4.8.0